# atcoder

./: .gitignore  README.md  atcoder.cabal  cabal.project  flake.nix  package.yaml  stack.yaml
app/AtCoderBeginnerContest024/: a.hs  b.hs
app/AtCoderBeginnerContest030/: a.hs  b.hs  c.hs
app/AtCoderBeginnerContest104/: a.hs  b.hs
app/AtCoderBeginnerContest105/: a.hs  b.hs  c.hs  d.hs
app/AtCoderBeginnerContest110/: a.hs  b.hs  c.hs  d.hs
app/AtCoderGrandContest014/: a.hs  f.hs
app/AtCoderGrandContest026/: a.hs  b.hs  c.hs
app/AtCoderRegularContest028/: a.hs  b.hs
app/AtCoderRegularContest045/: a.hs  b.hs
contest/abc066-b/: Main.hs  abc066-b.cabal
contests/abc066-b/: abc066-b.cabal
src/: Test.hs
src/AtCoderBeginnerContest024/: A.hs  B.hs
src/AtCoderBeginnerContest030/: A.hs  B.hs  C.hs
src/AtCoderBeginnerContest104/: A.hs  B.hs
src/AtCoderBeginnerContest105/: A.hs  B.hs  C.hs  D.hs
src/AtCoderBeginnerContest110/: A.hs  B.hs  C.hs  D.hs
src/AtCoderBeginnerContest112/: A.hs  B.hs  C.hs  D.hs  test.hs
src/AtCoderBeginnerContest113/: A.hs  B.hs  C.hs
src/AtCoderBeginnerContest117/: A.hs  B.hs  C.hs  D.hs
src/AtCoderBeginnerContest118/: A.hs  B.hs  C.hs  D.hs
src/AtCoderBeginnerContest119/: A.hs  B.hs  C.hs  D.hs
src/AtCoderBeginnerContest120/: A.hs  B.hs  C.hs  D.hs
src/AtCoderBeginnerContest123/: A.hs  B.hs  C.hs  D.hs
src/AtCoderBeginnerContest124/: A.hs  B.hs  C.hs  D.hs
src/AtCoderBeginnerContest125/: A.hs  B.hs  C.hs  D.hs
src/AtCoderBeginnerContest126/: A.hs  B.hs  C.hs  D.hs
src/AtCoderBeginnerContest128/: A.hs  B.hs  C.hs  D.hs
src/AtCoderBeginnerContest135/: A.hs  B.hs  C.hs  D.hs
src/AtCoderBeginnerContest148/: A.hs  B.hs  C.hs  D.hs  E.hs
src/AtCoderBeginnerContest151/: A.hs  B.hs  C.hs
src/AtCoderBeginnerContest183/: A.hs  B.hs  C.hs  D.hs
src/AtCoderBeginnersSelection/: ABC049C.hs  ABC081A.hs  ABC081B.hs  ABC083B.hs  ABC085B.hs  ABC085C.hs  ABC086A.hs  ABC086C.hs  ABC087B.hs  ABC088B.hs  PracticeA.hs
src/AtCoderGrandContest014/: A.hs  F.hs
src/AtCoderGrandContest026/: A.hs  B.hs  C.hs
src/AtCoderGrandContest028/: A.hs  B.hs
src/AtCoderGrandContest031/: A.hs
src/AtCoderGrandContest041/: A.hs
src/AtCoderRegularContest014/: B.hs
src/AtCoderRegularContest028/: A.hs  B.hs
src/AtCoderRegularContest045/: A.hs  B.hs
src/Diverta2019/: A.hs  B.hs  C.hs  D.hs
src/DwangoProgrammingContestV/: A.hs  B.hs  C.hs
src/ExaWizards2019/: A.hs  B.hs  C.hs  D.hs
src/Tenka1ProgrammerBeginnerContest/: A.hs  B.hs  C.hs
src/TenkaichiProgrammerContest2014YosenB/: A.hs
test/: AtCoderBeginnerContest024.hs  AtCoderBeginnerContest030.hs  AtCoderBeginnerContest104.hs  AtCoderBeginnerContest105.hs  AtCoderBeginnerContest110.hs  AtCoderBeginnerContest112.hs  AtCoderBeginnerContest113.hs  AtCoderBeginnerContest117.hs  AtCoderBeginnerContest118.hs  AtCoderBeginnerContest119.hs  AtCoderGrandContest026.hs  AtCoderGrandContest028.hs  AtCoderRegularContest028.hs  AtCoderRegularContest045.hs  DwangoProgrammingContestV.hs  Main.hs  Spec.hs  Tenka1ProgrammerBeginnerContest.hs  Test.hs
test/AtCoderBeginnerContest024/: ASpec.hs  BSpec.hs
test/AtCoderBeginnerContest030/: ASpec.hs  BSpec.hs  CSpec.hs
test/AtCoderBeginnerContest104/: ASpec.hs  BSpec.hs
test/AtCoderBeginnerContest105/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/AtCoderBeginnerContest110/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/AtCoderBeginnerContest112/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/AtCoderBeginnerContest113/: ASpec.hs  BSpec.hs  CSpec.hs
test/AtCoderBeginnerContest117/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/AtCoderBeginnerContest118/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/AtCoderBeginnerContest119/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/AtCoderBeginnerContest120/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/AtCoderBeginnerContest123/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/AtCoderBeginnerContest124/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/AtCoderBeginnerContest125/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/AtCoderBeginnerContest126/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/AtCoderBeginnerContest128/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/AtCoderBeginnerContest135/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/AtCoderBeginnerContest148/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs  ESpec.hs
test/AtCoderBeginnerContest151/: ASpec.hs  BSpec.hs  CSpec.hs
test/AtCoderBeginnerContest183/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/AtCoderBeginnersSelection/: ABC049CSpec.hs  ABC081ASpec.hs  ABC081BSpec.hs  ABC083BSpec.hs  ABC085BSpec.hs  ABC085CSpec.hs  ABC086ASpec.hs  ABC086CSpec.hs  ABC087BSpec.hs  ABC088BSpec.hs  PracticeASpec.hs
test/AtCoderGrandContest026/: BSpec.hs
test/AtCoderGrandContest028/: ASpec.hs  BSpec.hs
test/AtCoderGrandContest031/: ASpec.hs
test/AtCoderGrandContest041/: ASpec.hs
test/AtCoderRegularContest014/: BSpec.hs
test/AtCoderRegularContest028/: ASpec.hs  BSpec.hs
test/AtCoderRegularContest045/: ASpec.hs
test/Diverta2019/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/DwangoProgrammingContestV/: ASpec.hs  BSpec.hs  CSpec.hs
test/ExaWizards2019/: ASpec.hs  BSpec.hs  CSpec.hs  DSpec.hs
test/Tenka1ProgrammerBeginnerContest/: ASpec.hs  BSpec.hs  CSpec.hs
test/TenkaichiProgrammerContest2014YosenB/: ASpec.hs
