cabal-version: 3.12

name:           atcoder
version:        0.0.0

library
  exposed-modules:
      AtCoderBeginnerContest024.A
      AtCoderBeginnerContest024.B
      AtCoderBeginnerContest030.A
      AtCoderBeginnerContest030.B
      AtCoderBeginnerContest030.C
      AtCoderBeginnerContest104.A
      AtCoderBeginnerContest104.B
      AtCoderBeginnerContest105.A
      AtCoderBeginnerContest105.B
      AtCoderBeginnerContest105.C
      AtCoderBeginnerContest105.D
      AtCoderBeginnerContest110.A
      AtCoderBeginnerContest110.B
      AtCoderBeginnerContest110.C
      AtCoderBeginnerContest110.D
      AtCoderBeginnerContest112.A
      AtCoderBeginnerContest112.B
      AtCoderBeginnerContest112.C
      AtCoderBeginnerContest112.D
      AtCoderBeginnerContest113.A
      AtCoderBeginnerContest113.B
      AtCoderBeginnerContest113.C
      AtCoderBeginnerContest117.A
      AtCoderBeginnerContest117.B
      AtCoderBeginnerContest117.C
      AtCoderBeginnerContest117.D
      AtCoderBeginnerContest118.A
      AtCoderBeginnerContest118.B
      AtCoderBeginnerContest118.C
      AtCoderBeginnerContest118.D
      AtCoderBeginnerContest119.A
      AtCoderBeginnerContest119.B
      AtCoderBeginnerContest119.C
      AtCoderBeginnerContest119.D
      AtCoderBeginnerContest120.A
      AtCoderBeginnerContest120.B
      AtCoderBeginnerContest120.C
      AtCoderBeginnerContest120.D
      AtCoderBeginnerContest123.A
      AtCoderBeginnerContest123.B
      AtCoderBeginnerContest123.C
      AtCoderBeginnerContest123.D
      AtCoderBeginnerContest124.A
      AtCoderBeginnerContest124.B
      AtCoderBeginnerContest124.C
      AtCoderBeginnerContest124.D
      AtCoderBeginnerContest125.A
      AtCoderBeginnerContest125.B
      AtCoderBeginnerContest125.C
      AtCoderBeginnerContest125.D
      AtCoderBeginnerContest126.A
      AtCoderBeginnerContest126.B
      AtCoderBeginnerContest126.C
      AtCoderBeginnerContest126.D
      AtCoderBeginnerContest128.A
      AtCoderBeginnerContest128.B
      AtCoderBeginnerContest128.C
      AtCoderBeginnerContest128.D
      AtCoderBeginnerContest135.A
      AtCoderBeginnerContest135.B
      AtCoderBeginnerContest135.C
      AtCoderBeginnerContest135.D
      AtCoderBeginnerContest148.A
      AtCoderBeginnerContest148.B
      AtCoderBeginnerContest148.C
      AtCoderBeginnerContest148.D
      AtCoderBeginnerContest148.E
      AtCoderBeginnerContest151.A
      AtCoderBeginnerContest151.B
      AtCoderBeginnerContest151.C
      AtCoderBeginnerContest183.A
      AtCoderBeginnerContest183.B
      AtCoderBeginnerContest183.C
      AtCoderBeginnerContest183.D
      AtCoderBeginnersSelection.ABC049C
      AtCoderBeginnersSelection.ABC081A
      AtCoderBeginnersSelection.ABC081B
      AtCoderBeginnersSelection.ABC083B
      AtCoderBeginnersSelection.ABC085B
      AtCoderBeginnersSelection.ABC085C
      AtCoderBeginnersSelection.ABC086A
      AtCoderBeginnersSelection.ABC086C
      AtCoderBeginnersSelection.ABC087B
      AtCoderBeginnersSelection.ABC088B
      AtCoderBeginnersSelection.PracticeA
      AtCoderGrandContest014.A
      AtCoderGrandContest014.F
      AtCoderGrandContest026.A
      AtCoderGrandContest026.B
      AtCoderGrandContest026.C
      AtCoderGrandContest028.A
      AtCoderGrandContest028.B
      AtCoderGrandContest031.A
      AtCoderGrandContest041.A
      AtCoderRegularContest014.B
      AtCoderRegularContest028.A
      AtCoderRegularContest028.B
      AtCoderRegularContest045.A
      AtCoderRegularContest045.B
      Diverta2019.A
      Diverta2019.B
      Diverta2019.C
      Diverta2019.D
      DwangoProgrammingContestV.A
      DwangoProgrammingContestV.B
      DwangoProgrammingContestV.C
      ExaWizards2019.A
      ExaWizards2019.B
      ExaWizards2019.C
      ExaWizards2019.D
      Tenka1ProgrammerBeginnerContest.A
      Tenka1ProgrammerBeginnerContest.B
      Tenka1ProgrammerBeginnerContest.C
      TenkaichiProgrammerContest2014YosenB.A
  hs-source-dirs:
      src
  ghc-options: -fdefer-typed-holes
  build-depends:
      base
    , bytestring
    , containers
    , mtl
    , parsec
    , time
    , vector

test-suite atcoder-test
  main-is: Spec.hs
  other-modules:
      AtCoderBeginnerContest024.ASpec
      AtCoderBeginnerContest024.BSpec
      AtCoderBeginnerContest030.ASpec
      AtCoderBeginnerContest030.BSpec
      AtCoderBeginnerContest030.CSpec
      AtCoderBeginnerContest104.ASpec
      AtCoderBeginnerContest104.BSpec
      AtCoderBeginnerContest105.ASpec
      AtCoderBeginnerContest105.BSpec
      AtCoderBeginnerContest105.CSpec
      AtCoderBeginnerContest105.DSpec
      AtCoderBeginnerContest110.ASpec
      AtCoderBeginnerContest110.BSpec
      AtCoderBeginnerContest110.CSpec
      AtCoderBeginnerContest110.DSpec
      AtCoderBeginnerContest112.ASpec
      AtCoderBeginnerContest112.BSpec
      AtCoderBeginnerContest112.CSpec
      AtCoderBeginnerContest112.DSpec
      AtCoderBeginnerContest113.ASpec
      AtCoderBeginnerContest113.BSpec
      AtCoderBeginnerContest113.CSpec
      AtCoderBeginnerContest117.ASpec
      AtCoderBeginnerContest117.BSpec
      AtCoderBeginnerContest117.CSpec
      AtCoderBeginnerContest117.DSpec
      AtCoderBeginnerContest118.ASpec
      AtCoderBeginnerContest118.BSpec
      AtCoderBeginnerContest118.CSpec
      AtCoderBeginnerContest118.DSpec
      AtCoderBeginnerContest119.ASpec
      AtCoderBeginnerContest119.BSpec
      AtCoderBeginnerContest119.CSpec
      AtCoderBeginnerContest119.DSpec
      AtCoderBeginnerContest120.ASpec
      AtCoderBeginnerContest120.BSpec
      AtCoderBeginnerContest120.CSpec
      AtCoderBeginnerContest120.DSpec
      AtCoderBeginnerContest123.ASpec
      AtCoderBeginnerContest123.BSpec
      AtCoderBeginnerContest123.CSpec
      AtCoderBeginnerContest123.DSpec
      AtCoderBeginnerContest124.ASpec
      AtCoderBeginnerContest124.BSpec
      AtCoderBeginnerContest124.CSpec
      AtCoderBeginnerContest124.DSpec
      AtCoderBeginnerContest125.ASpec
      AtCoderBeginnerContest125.BSpec
      AtCoderBeginnerContest125.CSpec
      AtCoderBeginnerContest125.DSpec
      AtCoderBeginnerContest126.ASpec
      AtCoderBeginnerContest126.BSpec
      AtCoderBeginnerContest126.CSpec
      AtCoderBeginnerContest126.DSpec
      AtCoderBeginnerContest128.ASpec
      AtCoderBeginnerContest128.BSpec
      AtCoderBeginnerContest128.CSpec
      AtCoderBeginnerContest128.DSpec
      AtCoderBeginnerContest135.ASpec
      AtCoderBeginnerContest135.BSpec
      AtCoderBeginnerContest135.CSpec
      AtCoderBeginnerContest135.DSpec
      AtCoderBeginnerContest148.ASpec
      AtCoderBeginnerContest148.BSpec
      AtCoderBeginnerContest148.CSpec
      AtCoderBeginnerContest148.DSpec
      AtCoderBeginnerContest148.ESpec
      AtCoderBeginnerContest151.ASpec
      AtCoderBeginnerContest151.BSpec
      AtCoderBeginnerContest151.CSpec
      AtCoderBeginnerContest183.ASpec
      AtCoderBeginnerContest183.BSpec
      AtCoderBeginnerContest183.CSpec
      AtCoderBeginnerContest183.DSpec
      AtCoderBeginnersSelection.ABC049CSpec
      AtCoderBeginnersSelection.ABC081ASpec
      AtCoderBeginnersSelection.ABC081BSpec
      AtCoderBeginnersSelection.ABC083BSpec
      AtCoderBeginnersSelection.ABC085BSpec
      AtCoderBeginnersSelection.ABC085CSpec
      AtCoderBeginnersSelection.ABC086ASpec
      AtCoderBeginnersSelection.ABC086CSpec
      AtCoderBeginnersSelection.ABC087BSpec
      AtCoderBeginnersSelection.ABC088BSpec
      AtCoderBeginnersSelection.PracticeASpec
      AtCoderGrandContest026.BSpec
      AtCoderGrandContest028.ASpec
      AtCoderGrandContest028.BSpec
      AtCoderGrandContest031.ASpec
      AtCoderGrandContest041.ASpec
      AtCoderRegularContest014.BSpec
      AtCoderRegularContest028.ASpec
      AtCoderRegularContest028.BSpec
      AtCoderRegularContest045.ASpec
      Diverta2019.ASpec
      Diverta2019.BSpec
      Diverta2019.CSpec
      Diverta2019.DSpec
      DwangoProgrammingContestV.ASpec
      DwangoProgrammingContestV.BSpec
      DwangoProgrammingContestV.CSpec
      ExaWizards2019.ASpec
      ExaWizards2019.BSpec
      ExaWizards2019.CSpec
      ExaWizards2019.DSpec
      Tenka1ProgrammerBeginnerContest.ASpec
      Tenka1ProgrammerBeginnerContest.BSpec
      Tenka1ProgrammerBeginnerContest.CSpec
      TenkaichiProgrammerContest2014YosenB.ASpec
      Test
  hs-source-dirs:
      test
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      atcoder
    , base
    , bytestring
    , heredoc
    , hspec
    , main-tester
